k8s/00-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: import-visualizer
  labels:
    name: import-visualizer
